@@ -1,0 +1,35 @@
+@documentencoding utf-8
+
+@node Top
+
+EN SPACE: | |
+EN QUAD: | |
+SPACE: | |
+IDEOGRAPHIC SPACE: |　|
+PARAGRAPH SEPARATOR: | |
+LINE TABULATION: ||
+EM QUAD: | |
+CARRIAGE RETURN (CR): ||
+MEDIUM MATHEMATICAL SPACE: | |
+NARROW NO-BREAK SPACE: | |
+THIN SPACE: | |
+EM SPACE: | |
+THREE-PER-EM SPACE: | |
+NEXT LINE (NEL): ||
+FOUR-PER-EM SPACE: | |
+SIX-PER-EM SPACE: | |
+NO-BREAK SPACE: | |
+HAIR SPACE: | |
+FIGURE SPACE: | |
+OGHAM SPACE MARK: | |
+CHARACTER TABULATION: |	|
+MONGOLIAN VOWEL SEPARATOR: |᠎|
+LINE FEED (LF): |
+|
+LINE SEPARATOR: | |
+FORM FEED (FF): ||
+PUNCTUATION SPACE: | |
+
+
+NO-BREAK SPACE: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa bbbbbbbbbbbbbbbbbbbbb
+NARROW NO-BREAK SPACE: ccccccccccccccccccccccccccccccccccccccccccccccccccccccccc dddddddddddddddddddd
