@@ -1,3 +1,8 @@
+2013-08-10  Patrice Dumas  <pertusus@free.fr>
+
+	* tp/Texinfo/Convert/Line.pm, Texinfo/Convert/Paragraph.pm: preserve 
+	spaces coming from the document.
+
 2013-08-09  Patrice Dumas  <pertusus@free.fr>
 
 	* tp/Texinfo/Convert/DocBook.pm(_protect_text): convert
